--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!doctype html/>
+
+<header>
+	<title>Colin</title>
+	<link rel="stylesheet" href="index_style.css"/>
+</header>
+
+<body>
+	<h0> Colin's Resume </h0>
+</body>
