--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </header>
 
 <body>
-	<h0> Colin's Resume </h0>
+<p>
+	<h0> Colin Murphy </h0>
+</p>
+<p1>
+	<img src="http://imgur.com/a/df0gT" alt = "photo of colin murphy"/>
+</p1>
 </body>
