updated img link

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<h0> Colin Murphy </h0>
 </p>
 <p1>
-	<img src="http://imgur.com/ksvGzhw" alt = "photo of colin murphy"/>
+	<img src="http://i.imgur.com/ksvGzhw.png" alt = "photo of colin murphy"/>
 </p1>
 </body>
