updated style of index

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </header>
 
 <body>
-<p>
+<p class="img">
 	<h0> Colin Murphy </h0>
 </p>
 <p1>
-	<img src="http://i.imgur.com/ksvGzhw.png" alt = "photo of colin murphy"/>
+	<img class = "profile" src="http://i.imgur.com/ksvGzhw.png" alt = "photo of colin murphy"/> 
 </p1>
 </body>
