--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 </header>
 
 <body>
-<p class="name">
-	<h0> Colin Murphy </h0>
-</p>
+<h0 class = "name"> Colin Murphy </h0>
 <p1>
 	<img class = "profile" src="http://i.imgur.com/ksvGzhw.png" alt = "photo of colin murphy"/> 
 </p1>
