updated style of index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </header>
 
 <body>
-<h0 class = "name"> Colin Murphy </h0>
+<p class="name">
+	<h0> Colin Murphy </h0>
+</p>
 <p1>
 	<img class = "profile" src="http://i.imgur.com/ksvGzhw.png" alt = "photo of colin murphy"/> 
 </p1>
