updated styling of index css

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
 </header>
 
 <body>
-<p class="name">
-	<h0> Colin Murphy </h0>
-</p>
-<p1>
-	<img class = "profile" src="http://i.imgur.com/ksvGzhw.png" alt = "photo of colin murphy"/> 
-</p1>
+	<div class="profile">
+		<div class="image">
+			<h0> 
+				<p class="name">Colin Murphy</p>
+				<p class="bio">bio</p>
+				<p class="resume">resume</p>
+			</h0>
+		<img src="http://i.imgur.com/ksvGzhw.png" alt = "photo of colin murphy"/> 
+	</div>
+	</div>
 </body>
