linked resume.html in index.html for testing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h0> 
 				<p class="name">Colin Murphy</p>
 				<p class="bio">bio</p>
-				<p class="resume">resume</p>
+				<p class="resume"><a href="https://cmurph11.github.io/resume.html">resume</a></p>
 			</h0>
 		<img src="http://i.imgur.com/ksvGzhw.png" alt = "photo of colin murphy"/> 
 	</div>
