edited resume for html checker

--- a/resume.html
+++ b/resume.html
@@ -1,16 +1,18 @@
-<!doctype html/>
+<!doctype html>
 
 <head>
   <title>Colin's Resume</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 
-<h0>
-	Colin Murphy
-	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-	<a href=https//:www.colinpmurphy.com>portfolio</a>
-
 <body>
+  <h1>
+        Colin Murphy
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp
+	&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        <a href=https//:www.colinpmurphy.com>portfolio</a>
+  </h1>
+
 	<h1>Education</h1>
 		<h2>Tufts University, Medford, MA</h2>
 		<h2>Bachelor of Arts in Computer Science / May 2021</h2>
@@ -24,7 +26,7 @@
 					<ul>
 						<li>Collaborated with two artists featured in magazine to create photo concepts</li>
 						<li>Generated possible layouts for photo spreads, directed layout team to curate photos in editorial style</li>
-						<li>Contacted and planned with artists to schedule shoots</li></h6>
+						<li>Contacted and planned with artists to schedule shoots</li>
 					</ul>
 				</h6>
 
