edited resume for html checker

--- a/resume.html
+++ b/resume.html
@@ -8,8 +8,8 @@
 <body>
   <h1>
         Colin Murphy
-        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp
-	&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+        &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         <a href=https//:www.colinpmurphy.com>portfolio</a>
   </h1>
 
@@ -22,13 +22,13 @@
 	<h1>Experience</h1> 
 		<h2>Photographer and Developer, Currents Magazine</h2>
 			<h3>Tufts University (October 2016 – present)</h3>
-				<h6>
-					<ul>
+				<ul>
+					<h6>
 						<li>Collaborated with two artists featured in magazine to create photo concepts</li>
 						<li>Generated possible layouts for photo spreads, directed layout team to curate photos in editorial style</li>
 						<li>Contacted and planned with artists to schedule shoots</li>
-					</ul>
-				</h6>
+					</h6>
+				</ul>
 
 		<h2>Photographer, Camp Carolina</h2>
 			<h3>Brevard, North Carolina (June-July 2015/2016)</h3>
