--- a/resume.html
+++ b/resume.html
@@ -33,17 +33,17 @@
 
 		<h2>Photographer, Camp Carolina</h2>
 			<h3>Brevard, North Carolina (June-July 2015/2016)</h3>
-				<h6>
+				<div class="description"?
 					<ul>
 						<li>Documented life of campers in photos for online publication, promotional magazines and marketing</li>
 						<li>Worked with a team of photographers to refine and critique work produced</li>
 						<li>Communicated with camp directors, owners, and parents to refine content for specific needs of clients</li>
 						<li>Took, digitally processed, and published 200-500 photos per day online for camper’s parents</li>
 					</ul>
-				</h6>
+				</div>
 		<h2>Photographer, Freelance</h2>
 			<h3>Athens, Georgia (2014-2016)</h3>
-				<h6>
+				<div class="description">
 					<ul>
 						<li>Pursued an independent series focusing on being presentationally queer in the South</li>
 						<li>Planned artistic shoots with 3 local bands, photographed shows and festivals for marketing</li>
@@ -51,13 +51,13 @@
 						<li>Scheduled and organized with 15 paying clients for portrait sessions (Fall 2015)</li>
 						<li>Planned locations and collaborated with clients on aesthetic concepts</li>
 					</ul>
-				</h6>
+				</div>
 	<h1>Skills</h1>
-		<h3>
+		<div class="skills">
 			<ul>
 				<li>Photography: proficient with digital, 4x5in, 120mm, and 35mm formats</li>
 				<li>Language: proficient in English and Spanish</li>
 				<li>Computer: proficient in Adobe photographic software (Photoshop, Lightroom) as well as HTML and C++</li>
 			</ul>
-		</h3>
+		</div>
 </body>
