edited resume for html checker

--- a/resume.html
+++ b/resume.html
@@ -22,18 +22,18 @@
 	<h1>Experience</h1> 
 		<h2>Photographer and Developer, Currents Magazine</h2>
 			<h3>Tufts University (October 2016 – present)</h3>
-				<h6>
+				<div class="description">
 					<ul>
 						<li>Collaborated with two artists featured in magazine to create photo concepts</li>
 						<li>Generated possible layouts for photo spreads, directed layout team to curate photos in editorial style</li>
 						<li>Contacted and planned with artists to schedule shoots</li>
 					</ul>
-				</h6>
+				</div>
 				
 
 		<h2>Photographer, Camp Carolina</h2>
 			<h3>Brevard, North Carolina (June-July 2015/2016)</h3>
-				<div class="description"?
+				<div class="description">
 					<ul>
 						<li>Documented life of campers in photos for online publication, promotional magazines and marketing</li>
 						<li>Worked with a team of photographers to refine and critique work produced</li>
