edited index.html for checking

--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
-<!doctype html/>
+<!DOCTYPE html>
 
-<header>
+<head>
 	<title>Colin</title>
 	<link rel="stylesheet" href="index_style.css"/>
-</header>
+</head>
 
 <body>
 	<div class="profile">
 		<div class="image">
-			<h0> 
-				<p class="name">Colin Murphy</p>
-				<p class="bio"><a href="https://cmurph11.github.io/bio.html">bio</a></p>
-				<p class="resume"><a href="https://cmurph11.github.io/resume.html">resume</a></p>
-			</h0>
-		<img src="http://i.imgur.com/ksvGzhw.png" alt = "photo of colin murphy"/> 
-	</div>
+			<p class="name">Colin Murphy</p>
+			<p class="bio"><a href="https://cmurph11.github.io/bio.html">bio</a></p>
+			<p class="resume"><a href="https://cmurph11.github.io/resume.html">resume</a></p>
+			<img src="http://i.imgur.com/ksvGzhw.png" alt = "photo of colin murphy"/> 
+		</div>
 	</div>
 </body>
