--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<p class="name">Colin Murphy</p>
 			<p class="bio"><a href="https://cmurph11.github.io/bio.html">bio</a></p>
 			<p class="resume"><a href="https://cmurph11.github.io/resume.html">resume</a></p>
+			<p class="portfolio"><a href="https://www.colinpmurphy.com">portfolio</a></p>
 			<img src="http://i.imgur.com/ksvGzhw.png" alt = "photo of colin murphy"/> 
 		</div>
 	</div>
