--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 <body>
 	<div class="profile">
-		<div class="image">
-			<p class="name">Colin Murphy</p>
-			<p class="bio"><a href="https://cmurph11.github.io/bio.html">bio</a></p>
-			<p class="resume"><a href="https://cmurph11.github.io/resume.html">resume</a></p>
-			<p class="portfolio"><a href="https://www.colinpmurphy.com">portfolio</a></p>
-			<img src="http://i.imgur.com/ksvGzhw.png" alt = "photo of colin murphy"/> 
+		<div class="content">
+			<div class="text">
+				<p class="name">Colin Murphy</p>
+				<p class="resume"><a href="https://cmurph11.github.io/resume.html" target="_blank">resume</a></p>
+				<p class="portfolio"><a href="https://www.colinpmurphy.com" target="_blank">portfolio</a></p>
+			</div>
 		</div>
 	</div>
 </body>
