--- a/resume.html
+++ b/resume.html
@@ -7,12 +7,14 @@
 
 <body>
  	<h1>
-        Colin Murphy
+        Colin Murphy 
+        <div class = "contact">706.201.6832
+      	<br>389 Boston Avenue, Medford, MA 02155</div> 
 	</h1>
 
 	<h1>Education</h1>
 		<h2>Tufts University, Medford, MA</h2>
-		<h2>Bachelor of Arts in Computer Science / May 2021</h2>
+		<h2>Bachelor of Arts in Engineering Psychology / May 2021</h2>
 		<h2>School of the Museum of Fine Arts, Boston, MA</h2>
 		<h2>Bachelor of Fine Arts in Studio Art / May 2021</h2>
 	
@@ -21,9 +23,9 @@
 			<h3>Tufts University (October 2016 – present)</h3>
 				<div class="description">
 					<ul>
-						<li>Collaborated with two artists featured in magazine to create photo concepts</li>
-						<li>Generated possible layouts for photo spreads, directed layout team to curate photos in editorial style</li>
-						<li>Contacted and planned with artists to schedule shoots</li>
+						<li>Collaborated with other student artists to create and refine concept for magazine</li>
+						<li>Worked with artists featured in magazine to schedule and plan profile shoots</li>
+						<li>Generated possible layouts for photo spreads, directed layout team to curate photos</li>
 					</ul>
 				</div>
 				
