--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="profile">
 		<div class="content">
 			<div class="text">
-				<p class="resume"><a href="" download">resume</a></p>
+				<p class="resume"><a href="photoresume.pdf" download">resume</a></p>
 				<p class="portfolio"><a href="https://www.colinpmurphy.com" target="_blank">portfolio</a></p>
 			</div>
 		</div>
