moved cv.gif to test

--- a/test/index.html
+++ b/test/index.html
@@ -22,7 +22,7 @@
 <body> 
 	<div class="all">
 		<div class="gifs">
-			<a href="../test/resume.html"><img src="../test/gifs/cv.gif" alt="cv"></a>
+			<a href="../test/resume.html"><img src="../test/cv.gif" alt="cv"></a>
 		</div>
 		<div class="face">
 			<a href="../test/bio.html"><img src="face2.jpg" alt="Colin Murphy" style="width:100px"></a>
