--- a/test/georgia.html
+++ b/test/georgia.html
@@ -45,20 +45,24 @@
 </head>
 
 <body>
-    <div class="gallery">
-	   <img src="../test/georgia/georgia1.jpg" id="slide" class="image">
-    </div>
-    <div class="nav">
-        <img src="../test/gifs/navleft.gif" alt="previous" onclick="prevImage()" style="width:25px">
-        <img src="../test/gifs/navdot.gif" alt="menu" id="imgclickandchange" onclick="displayMenu()" style="width:25px">
-        <div id="menu" style="display:none;">
-                <a href = ../test/portraits.html title="portraits"><img src= "../test/gifs/portrait.gif" alt="portraits" style="width:25px"></a>
-                <a href = "../test/georgia.html" alt="georgia" title="georgia" ><img src="../test/gifs/georgia.gif" alt="georgia" style="width:25px"></a>
-                <a href = "../test/travel.html" alt="travel" title="travel" ><img src="../test/gifs/travel.gif" alt="travel" style="width:25px"></a>
+    <div class = imgcontainer>
+        <div class="gallery">
+    	   <img src="./georgia/georgia1.jpg" id="slide" class="image">
         </div>
-        <img src="../test/gifs/navright.gif" alt="next" onclick="nextImage()" style="width:25px">
+    </div>
+    <div class=allnav>
+        <div class=nav>
+            <img src="../test/gifs/navleft.gif" alt="previous" onclick="prevImage()" style="width:25px">
+            <img src="../test/gifs/navdot.gif" alt="menu" id="imgclickandchange" onclick="displayMenu()" style="width:25px">
+            <div id="menu" style="display:none;">
+                    <a href = ../test/portraits.html title="portraits"><img src= "../test/gifs/portrait.gif" alt="portraits" style="width:25px"></a>
+                    <a href = "../test/georgia.html" alt="georgia" title="georgia" ><img src="../test/gifs/georgia.gif" alt="georgia" style="width:25px"></a>
+                    <a href = "../test/travel.html" alt="travel" title="travel" ><img src="../test/gifs/travel.gif" alt="travel" style="width:25px"></a>
+            </div>
+            <img src="../test/gifs/navright.gif" alt="next" onclick="nextImage()" style="width:25px">
     </div>
     <div class="home">
         <a href="../test/index.html"><img src="../test/gifs/home.gif" id="home" style="display:none"></a>
     </div>
+</div>
 </body>
