--- a/test/index.html
+++ b/test/index.html
@@ -20,20 +20,22 @@
 </head>
 
 <body> 
-	<div class="all">
-		<div class="gifs">
-			<a href="../test/resume.html"><img src="../test/cv.gif" alt="cv"></a>
-		</div>
-		<div class="face">
-			<a href="../test/bio.html"><img src="face2.jpg" alt="Colin Murphy" style="width:100px"></a>
-		</div>
-		<div class="gifs">
-			<img src="../test/gifs/portfolio.gif" alt="portfolio" id="imgclickandchange" onclick="changeImage()">
+<div class=all-container>
+	<div class=container>
+			<div class="cv">
+				<a href="./resume.html"><img src="./cv.gif" alt="cv"></a>
+			</div>
+			<div class="face">
+				<a href="./bio.html"><img src="face2.jpg" alt="Colin Murphy" style="width:100px"></a>
+			</div>
+			<div class="portfolio">
+				<img src="./gifs/portfolio.gif" alt="portfolio" id="imgclickandchange" onclick="changeImage()">
+			</div>
+		<div class="menu" id="menu" style="display:none;">
+					<a href = ./portraits.html title="portraits"><img src= "./gifs/portrait.gif" alt="portraits"></a>
+					<a href = "./georgia.html" alt="georgia" title="georgia" ><img src="./gifs/georgia.gif" alt="georgia"></a>
+					<a href = "./travel.html" alt="travel" title="travel" ><img src="./gifs/travel.gif" alt="travel"></a>
 		</div>
 	</div>
-	<div id="menu" style="display:none;">
-				<a href = ../test/portraits.html title="portraits"><img src= "../test/gifs/portrait.gif" alt="portraits" style="width:75px"></a>
-				<a href = "../test/georgia.html" alt="georgia" title="georgia" ><img src="../test/gifs/georgia.gif" alt="georgia" style="width:75px"></a>
-				<a href = "../test/travel.html" alt="travel" title="travel" ><img src="../test/gifs/travel.gif" alt="travel" style="width:75px"></a>
-	</div>
+</div>
 </body>
