--- a/notes.html
+++ b/notes.html
@@ -8,3 +8,4 @@
 <body>
 when pot is fully legal, what sort or spaces will be designed for recreational consumption? the UX of a bar doesn't often align with that of a smoker.
 <body>
+ok but what about mediocre weed like what will happen to that??  y'all know imma miss her
