--- a/georgia.html
+++ b/georgia.html
@@ -12,7 +12,7 @@
 	function nextImage(){
 
     if(counter < 9){
-        document.getElementById("slide").src = "../test/georgia/"+filename.concat(counter+1,filetype);
+        document.getElementById("slide").src = "../georgia/"+filename.concat(counter+1,filetype);
         counter++;
     }
     else if(counter == 9){
@@ -21,7 +21,7 @@
 };
     function prevImage(){
         if(counter > 0){
-        document.getElementById("slide").src = "../test/georgia/"+filename.concat(counter+1,filetype);
+        document.getElementById("slide").src = "../georgia/"+filename.concat(counter+1,filetype);
         counter--;
         console.log(filename.concat(counter+1,filetype));
     }
@@ -30,7 +30,7 @@
     }
 };
     function displayMenu() {
-        if (document.getElementById("imgclickandchange").src == "navdot.gif")
+        if (document.getElementById("imgclickandchange").src == "/gifs/navdot.gif")
         {
             document.getElementById("imgclickandchange").style = "display:none";
         }
@@ -52,17 +52,17 @@
     </div>
     <div class=allnav>
         <div class=nav>
-            <img src="../test/gifs/navleft.gif" alt="previous" onclick="prevImage()" style="width:25px">
-            <img src="../test/gifs/navdot.gif" alt="menu" id="imgclickandchange" onclick="displayMenu()" style="width:25px">
+            <img src="../gifs/navleft.gif" alt="previous" onclick="prevImage()" style="width:25px">
+            <img src="../gifs/navdot.gif" alt="menu" id="imgclickandchange" onclick="displayMenu()" style="width:25px">
             <div id="menu" style="display:none;">
-                    <a href = ../test/portraits.html title="portraits"><img src= "../test/gifs/portrait.gif" alt="portraits" style="width:25px"></a>
-                    <a href = "../test/georgia.html" alt="georgia" title="georgia" ><img src="../test/gifs/georgia.gif" alt="georgia" style="width:25px"></a>
-                    <a href = "../test/travel.html" alt="travel" title="travel" ><img src="../test/gifs/travel.gif" alt="travel" style="width:25px"></a>
+                    <a href = ../portraits.html title="portraits"><img src= "../gifs/portrait.gif" alt="portraits" style="width:25px"></a>
+                    <a href = "../georgia.html" alt="georgia" title="georgia" ><img src="../gifs/georgia.gif" alt="georgia" style="width:25px"></a>
+                    <a href = "../travel.html" alt="travel" title="travel" ><img src="../gifs/travel.gif" alt="travel" style="width:25px"></a>
             </div>
-            <img src="../test/gifs/navright.gif" alt="next" onclick="nextImage()" style="width:25px">
+            <img src="../gifs/navright.gif" alt="next" onclick="nextImage()" style="width:25px">
     </div>
     <div class="home">
-        <a href="../test/index.html"><img src="../test/gifs/home.gif" id="home" style="display:none"></a>
+        <a href="../index.html"><img src="../gifs/home.gif" id="home" style="display:none"></a>
     </div>
 </div>
 </body>
