updated links to behance and squarespace; modified bio and resume

--- a/index.html
+++ b/index.html
@@ -23,18 +23,20 @@
 <div class=all-container>
 	<div class=container>
 			<div class="cv">
-				<a href="./resume.html"><img src="./cv.gif" alt="cv"></a>
+				<a href="./murphy_resume.html"><img src="./cv.gif" alt="cv"></a>
 			</div>
 			<div class="face">
-				<a href="./bio.html"><img src="face2.jpg" alt="Colin Murphy" style="width:100px"></a>
+				<div class = "facelink">
+					<a href="./bio.html"><img src= "face2.jpg"></a>
+				</div>
 			</div>
 			<div class="portfolio">
 				<img src="./gifs/portfolio.gif" alt="portfolio" id="imgclickandchange" onclick="changeImage()">
 			</div>
 		<div class="menu" id="menu" style="display:none;">
-					<a href = ./portraits.html title="portraits"><img src= "./gifs/portrait.gif" alt="portraits"></a>
-					<a href = "./georgia.html" alt="georgia" title="georgia" ><img src="./gifs/georgia.gif" alt="georgia"></a>
-					<a href = "./travel.html" alt="travel" title="travel" ><img src="./gifs/travel.gif" alt="travel"></a>
+					<a href = https://www.colinpmurphy.com target = "_blank" alt="photography" title="photography" ><img src="./gifs/camera.gif" alt="camera icon"></a>
+					<a href = https://www.behance.net/colinpmurphy target ="_blank" title="behance"><img src= "./gifs/behance.gif" alt="behance icon"></a>
+					<!--<a href = "./travel.html" alt="travel" title="travel" ><img src="./gifs/travel.gif" alt="travel"></a> -->
 		</div>
 	</div>
 </div>
