--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<img src="./gifs/portfolio.gif" alt="portfolio" id="imgclickandchange" onclick="changeImage()">
 			</div>
 		<div class="menu" id="menu" style="display:none;">
-					<!--<a href = https://www.colinpmurphy.com target = "_blank" alt="photography" title="photography" ><img src="./gifs/camera.gif" alt="camera icon"></a>-->
+					<a href = https://www.colinpmurphy.com target = "_blank" alt="photography" title="photography" ><img src="./gifs/camera.gif" alt="camera icon"></a>
 					<a href = https://www.behance.net/colinpmurphy target ="_blank" title="behance"><img src= "./gifs/behance.gif" alt="behance icon"></a>
 					<!--<a href = "./travel.html" alt="travel" title="travel" ><img src="./gifs/travel.gif" alt="travel"></a> -->
 		</div>
