updated major on resume....

--- a/murphy_resume.fld/murphy_resume.html
+++ b/murphy_resume.fld/murphy_resume.html
@@ -1892,7 +1892,7 @@ style='font-size:10.0pt;font-family:"Nunito Sans"'>Tufts University</span></b><s
 style='font-size:10.0pt;font-family:"Nunito Sans"'>, Medford, MA<o:p></o:p></span></p>
 
 <p class=MsoNormal><span style='font-size:10.0pt;font-family:"Nunito Sans"'>Bachelor
-of Science in Engineering Psychology; Minors in Computer Science, Studio Art
+of Science in Computer Science; Minors in Studio Art
 and German / May 2020<o:p></o:p></span></p>
 
 <p class=MsoNormal><i style='mso-bidi-font-style:normal'><span
